--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "homepage": "https://github.com/szorfein/api-fastify",
   "dependencies": {
-    "fastify": "^5.6.2"
+    "fastify": "^5.6.2",
+    "fastify-plugin": "^5.1.0"
   }
 }
