add /auth endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ API_CLIENT="hello"
 PG_DB="name_database"
 PG_USER="user_database"
 PG_PASS="pass_database"
+JWT_SECRET="SuperSaltWithAtLeast10MultipleRandomKeywords"
+JWT_EXPIRE_IN="1d"
