--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/szorfein/api-fastify",
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
+    "@fastify/jwt": "^10.0.0",
     "@fastify/sensible": "^6.0.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.1",
